--- a/Pipfile
+++ b/Pipfile
@@ -11,24 +11,25 @@ name = "pypi"
 
 [packages]
 
-asgi_redis = "==1.4.3"
+asgi-redis = "==1.4.3"
 asgiref = "==1.1.2"
 attrs = "==17.3.0"
 autobahn = "==17.10.1"
-Automat = "==0.6.0"
+automat = "==0.6.0"
 channels = "==1.1.8"
 constantly = "==15.1.0"
 daphne = "==1.3.0"
-Django = "==1.11.7"
+django = "==1.11.7"
 hyperlink = "==17.3.1"
 incremental = "==17.5.0"
 msgpack-python = "==0.4.8"
 "psycopg2" = "==2.7.3.2"
 pytz = "==2017.3"
 redis = "==2.10.6"
-Twisted = "==17.9.0"
+twisted = "==17.9.0"
 txaio = "==2.8.2"
 "zope.interface" = "==4.4.3"
+spacy = "*"
 
 
 [requires]
